--- a/.devcontainer/environment.yml
+++ b/.devcontainer/environment.yml
@@ -1,5 +1,7 @@
 name: ai4beg
 channels:
+  - conda-forge
+  - pytorch
   - defaults
 dependencies:
   - ipykernel=6.4.1
@@ -13,11 +15,11 @@ dependencies:
   - scikit-learn=0.24.2
   - scipy=1.6.2
   - pip=21.0.1
-  - conda-forge::opencv=4.5
+  - opencv=4.5
   - setuptools=58.0.4
-  - pytorch::pytorch=1.11.0
-  - pytorch::torchtext=0.12.0
-  - pytorch::torchvision=0.12.0
-  - pytorch::torchdata=0.3.0
+  - pytorch
+  - torchvision>=0.12.0
+  - torchtext>=0.12.0
+  - torchdata>=0.3.0
   - pip:
-    - -r requirements.txt
+      - -r requirements.txt
